; ModuleID = '/home/carl/AnghaBench/curl/tests/libtest/extr_first.c_wait_ms.c'
source_filename = "/home/carl/AnghaBench/curl/tests/libtest/extr_first.c_wait_ms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wait_ms(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.timeval, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = sdiv i32 %4, 1000
  %6 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 0
  store i32 %5, i32* %6, align 4
  %7 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = mul nsw i32 %8, 1000
  %10 = load i32, i32* %2, align 4
  %11 = sub nsw i32 %10, %9
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* %2, align 4
  %13 = mul nsw i32 %12, 1000
  %14 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 1
  store i32 %13, i32* %14, align 4
  %15 = call i32 @select_wrapper(i32 0, i32* null, i32* null, i32* null, %struct.timeval* %3)
  ret void
}

declare dso_local i32 @select_wrapper(i32, i32*, i32*, i32*, %struct.timeval*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
